kubernetes/03-services-deployments.yaml
# AUTH
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: auth:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: microservices
spec:
  selector:
    app: auth
  ports:
    - port: 3001

---
# PAYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: payment:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: microservices
spec:
  selector:
    app: payment
  ports:
    - port: 3002

---
# RESERVATION
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
        - name: reservation
          image: reservation:latest
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: reservation
  namespace: microservices
spec:
  selector:
    app: reservation
  ports:
    - port: 3003

---
# API GATEWAY
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: microservices
spec:
  selector:
    app: api-gateway
  ports:
    - port: 3000
